Have skeleton of index, The Intro EP, and Contact made

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ javascript - function, makes it do stuff like load data real time. javascript is
 html is all about tags <something>
 
 
-
+<!doctype html>
 <html>
 	<head>
 		<title>MC Curtis</title>
@@ -16,44 +16,17 @@ html is all about tags <something>
 	<body>
 		<h1> MC Curtis </h1>
 		<h3> The young protegy </h3>
-		use p for fresh line breaks
+		<ul>
+			<li>Home</li>
+			<li><a href="theintro.html">The Intro EP</a></li>
+			<li><a href="Contact.html">Contact </a></li>
+		</ul>
 		<p> 
-		This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released his first major project <strong>The Intro</strong>
+		This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
 		</p>
+
 		check it out on
 		<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">spotify</a>
-		<br>
-		consisting of the tracks
-		ul (unordered lists)
-
-		<ul>
-			<li> The Intro </li>
-			<li> Glow </li>
-			<li> No Cap </li>
-			<li> Freestyle Henny </li>
-			<li> Turnin' Off </li>
-			<li> Cash Right </li>
-			<li> Tried </li>
-			<li> Laughing </li>
-			<li> Till the End of the Night [06/10/19] </li>
-			<li> Profit [06/10/19] </li>
-		</ul>
-
-
-		ol (ordered lists)
-		<ol>
-			<li> The Intro </li>
-			<li> Glow </li>
-			<li> No Cap </li>
-			<li> Freestyle Henny </li>
-			<li> Turnin' Off </li>
-			<li> Cash Right </li>
-			<li> Tried </li>
-			<li> Laughing </li>
-			<li> Till the End of the Night [06/10/19] </li>
-			<li> Profit [06/10/19] </li>
-		</ol>
-		<br>
 
 		<img src="https://i1.wp.com/www.dailycal.org/assets/uploads/2018/06/Flatbush-Zombies_Ben-Kay.Courtesy.jpg?ssl=1">
 
