--- a/theintro.html
+++ b/theintro.html
@@ -5,6 +5,16 @@
 	</head>
 
 	<body>
+		<h1>The Intro</h1>
+
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li> The Intro </li>
+			<li><a href="Contact.html">Contact </a></li>
+
+		</ul>
+
+
 
 	consisting of the tracks
 		ul (unordered lists)
