Changed name of Contacts, worked on new contacts and created UCU

--- a/UCU.html
+++ b/UCU.html
@@ -1,16 +1,17 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Streaming and Account Links</title>
+		<title>UCU</title>
 	</head>
 
 	<body>
-		<h1> MC Curtis </h1>
+		<h1> Underground ComeUp Records </h1>
 
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="theintro.html">The Intro EP</a></li>
-			<li> Contact </li>
+			<li>UCU</li>
+			<li><a href="MusicLinks.html">Streaming and Account Links </a></li>
 		</ul>
 		<p>
 		<Strong>Spotify</Strong>
@@ -32,4 +33,3 @@
 	</body>
 
 </html>
-
