--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@ html is all about tags <something>
 
 	<body>
 		<h1> MC Curtis </h1>
-		<h3> The young protegy </h3>
+		<h3> The young prodigy </h3>
 		<ul>
 			<li>Home</li>
 			<li><a href="theintro.html">The Intro EP</a></li>
-			<li><a href="Contact.html">Contact </a></li>
+			<li><a href="UCU.html"> UCU</a></li>
+			<li><a href="MusicLinks.html">Streaming and Account Links </a></li>
 		</ul>
+
 		<p> 
 		This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
 		</p>
