--- a/theintro.html
+++ b/theintro.html
@@ -10,7 +10,8 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li> The Intro </li>
-			<li><a href="Contact.html">Contact </a></li>
+			<li><a href="UCU.html"> UCU</a></li>
+			<li><a href="MusicLinks.html">Streaming and Account Links </a></li>
 
 		</ul>
 
