--- a/MusicLinks.html
+++ b/MusicLinks.html
@@ -10,7 +10,8 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="theintro.html">The Intro EP</a></li>
-			<li> Contact </li>
+			<li><a href="UCU.html"> UCU</a></li>
+			<li>Streaming and Account Links</li>
 		</ul>
 		<p>
 		<Strong>Spotify</Strong>
@@ -25,8 +26,8 @@
 		<Strong>SoundCloud</Strong>
 		<ul>
 			<li><a href="https://soundcloud.com/user-593936036">MC Curtis</a></li>
-			<li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
-			<li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+			<li><a href="https://soundcloud.com/user-593936036/sets/the-intro">The Intro EP</a></li>
+			<li><a href="https://soundcloud.com/user-593936036/freestyle-henny-official-audio">Freestyle Henny</a></li>
 		</ul>
 		<p>
 	</body>
