Started css files and learning/playing around with changing background color

--- a/MusicLinks.html
+++ b/MusicLinks.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Streaming and Account Links</title>
+		<link href="main.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
