--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ html is all about tags <something>
 
 <!doctype html>
 <html>
+
 	<head>
 		<title>MC Curtis</title>
+		<link href="main.css" rel="stylesheet" type="text/css" />
 	</head>
 
 	<body>
