--- a/UCU.html
+++ b/UCU.html
@@ -14,6 +14,14 @@
 			<li>UCU</li>
 			<li><a href="MusicLinks.html">Streaming and Account Links </a></li>
 		</ul>
+		<h2><Strong>Toronto After Dark</Strong></h2>
+
+		<p class="darker">
+
+		Toronto After Dark was MC Curtis first introduction to the Toronto music industry. Reaching out through social media MC was able to make this collab album with many OG Toronto artists in order to put them on the map (even though MC Curtis did not actually make an appearance on this album).
+
+		</p>
+
 		<p>
 		<Strong>Spotify</Strong>
 		<ul>
@@ -21,7 +29,7 @@
 			<li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
 			<li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
 		</ul>
-		<p>
+		</p>
 
 		<p>
 		<Strong>SoundCloud</Strong>
@@ -30,7 +38,35 @@
 			<li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
 			<li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
 		</ul>
+		</p>
+
+
+		<h2><Strong>Toronto After Dark 2</Strong></h2>
+
+		<p class="darker">
+
+		Toronto After Dark 2 was where MC Curtis made his first appearance as an artist and made a splash!
+
+		</p>
+
 		<p>
+		<Strong>Spotify</Strong>
+		<ul>
+			<li><a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">MC Curtis</a></li>
+			<li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
+			<li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+		</ul>
+		</p>
+
+		<p>
+		<Strong>SoundCloud</Strong>
+		<ul>
+			<li><a href="https://soundcloud.com/user-593936036">MC Curtis</a></li>
+			<li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
+			<li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+		</ul>
+		</p>
+
 	</body>
 
 </html>
