--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Bootstrap Layouts Intro</title>
-
+		<link rel="stylesheet" href="styles/main.css">
 		<!-- Required meta tags -->
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,16 +10,15 @@
     	<!-- Bootstrap CSS -->
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    	<title>Hello, world!</title>
   	</head>
   	
 
   	<body>
-    <h1>Hello, world!</h1>
 
-    <div class="row"></div>
-        <div class="col-sm-6">test</div>
 
+    <div class="row">
+        <div class="darkBG col-sm-6">test</div>
+	</div>
 
     <!-- Always put scripts at bottom and style sheets at bottom so page does not have to wait for all the scripts to load before it shows user the page. keep style sheets at top because we want style to show up right when page appears. -->
     <!-- Optional JavaScript -->
