Started learning bootstrap. Got image imported to main page properly

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -68,7 +68,7 @@
 	<section class="home container">
 		<div class="row mt-5">
 			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="images/MillCoverDark.jpg">
+				<img class="img-fluid" alt="" src="img/MillCoverDark.png">
 			</div>
 		</div>
 	</section>
