Continued working on homepage. set up hyper linked and info about the intro ep

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -70,8 +70,40 @@
 			<div class="col-lg-6 mt-5 py-5 pl-5">
 				<img class="img-fluid" alt="" src="img/MillCoverDark.png">
 			</div>
+			<!--my means margin on y-->
+			<div class="col-lg-6 my-auto">
+				<!-- so we have 12 rows to work with-->
+				<div class="row">
+					<div class="home-content offset -lg-1 col-lg-10">
+						<h1 class="pb-3"> MC Curtis</h1>
+						<h2 class="pb-3"> On The Rise</h2>
+						<p class="pb-3"> This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released 
+						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
+
+						</p>
+
+						<button class="btn btn-lg btn-outline-secondary">The Intro EP</button>
+					</div>
+
+				</div>
+
+			</div>
 		</div>
 	</section>
+<!--Check Out MC Curtis' New EP-->
+<section class="go-stream py-5">
+	<!--Making the size of this class. text in center
+	and width of text 50% of the screen-->
+	<div class="container text-center w-50">
+		<h2 class="py-3">Check Out MC Curtis' New EP</h2>
+		<div class="mx-auto heading-line"></div>
+		<p class="py-3">MC Curtis started his career being featured on Toront After Dark 2 but he released his first
+			solo mixtape/ep June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO">Freestyle Henny</a> and <a href="https://ampl.ink/nDlYq">No Cap</a>.
+		</p>
+		<button class="btn btn-lg btn-primary">Stream Here</button>
+	</div>
+
+</section>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
