made links clickable and started making other pages branching from main page

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -30,17 +30,20 @@
 			<div class="collapse navbar-collapse justify-content-end" id="collapsibleNavId">
 				<ul class="nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">The Intro <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">UCU</a>
+						<a class="nav-link" href="UCU.html">UCU</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="#">Socials</a>
+						<a class="nav-link" href="Socials.html">Socials</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Collabs</a>
+						<a class="nav-link" href="Collabs.html">Collabs</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="Distography.html">Distrography</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link btn btn-outline-secondary" href="#">Contact</a>
