Trying to start UCU page

--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>The Intro</title>
+    <title>Underground ComeUp (UCU Records)</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -59,11 +59,66 @@
 		</div>
 		
 	</nav>
+    <section class="Page py-5">
+    <h2 class="titlestart"><Strong>Toronto After Dark</Strong></h2>
+
+    <p class="darker">
+
+    Toronto After Dark was MC Curtis first introduction to the Toronto music industry. Reaching out through social media MC was able to make this collab album with many OG Toronto artists in order to put them on the map (even though MC Curtis did not actually make an appearance on this album).
+
+    </p>
+
+    <p>
+    <Strong>Spotify</Strong>
+    <ul>
+        <li><a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">MC Curtis</a></li>
+        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
+        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+    </ul>
+    </p>
+
+    <p>
+    <Strong>SoundCloud</Strong>
+    <ul>
+        <li><a href="https://soundcloud.com/user-593936036">MC Curtis</a></li>
+        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
+        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+    </ul>
+    </p>
+
+
+    <h2><Strong>Toronto After Dark 2</Strong></h2>
+
+    <p class="darker">
+
+    Toronto After Dark 2 was where MC Curtis made his first appearance as an artist and made a splash!
+
+    </p>
+
+    <p>
+    <Strong>Spotify</Strong>
+    <ul>
+        <li><a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">MC Curtis</a></li>
+        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
+        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+    </ul>
+    </p>
+
+    <p>
+    <Strong>SoundCloud</Strong>
+    <ul>
+        <li><a href="https://soundcloud.com/user-593936036">MC Curtis</a></li>
+        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
+        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
+    </ul>
+    </p>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</section> 
+</body>
 </html>
