Got UCU mostly setup and links functioning

--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -59,12 +59,12 @@
 		</div>
 		
 	</nav>
-    <section class="Page py-5">
+    <section class="Page py-5"> <!--py means padding y axis-->
     <h2 class="titlestart"><Strong>Toronto After Dark</Strong></h2>
-
+    <img src="img/TOD1.jpg" class="center">
     <p class="darker">
 
-    Toronto After Dark was MC Curtis first introduction to the Toronto music industry. Reaching out through social media MC was able to make this collab album with many OG Toronto artists in order to put them on the map (even though MC Curtis did not actually make an appearance on this album).
+    Toronto After Dark was MC Curtis' first introduction to the Toronto music industry. Reaching out through social media MC was able to make this collab album with many OG Toronto artists in order to put them on the map (even though MC Curtis did not actually make an appearance on this album).
 
     </p>
 
