Continued working on UCU and started adding spotify links to main index page

--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -68,14 +68,29 @@
 
     </p>
 
-    <p>
-    <Strong>Spotify</Strong>
+
+    <h4 ><Strong>Spotify</Strong></h4>
+
+
+
+<!--THIS IS FOR ANOTHER SECTION LIKE MAIN-->    
+    <div class="row"> <!--below shows how to add link to a column divident-->
+        <a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">
+        <div class="col">MC Curtis</div></a>
+        <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">
+        <div class="col">The Intro EP</div></a>
+        <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">
+        <div class="col">All Toronto Playlist</div></a>
+
+    </div>
+
+
+
     <ul>
         <li><a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">MC Curtis</a></li>
         <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
         <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
     </ul>
-    </p>
 
     <p>
     <Strong>SoundCloud</Strong>
