--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -103,8 +103,28 @@
 		<button class="btn btn-lg btn-primary">Stream Here</button>
 	</div>
 
+
 </section>
-	<!-- Optional JavaScript -->
+
+<section>
+<h4 ><Strong>Spotify</Strong></h4>
+
+
+
+<!--THIS IS FOR ANOTHER SECTION LIKE MAIN-->    
+    <div class="row"> <!--below shows how to add link to a column divident-->
+        <a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">
+        <div class="col">MC Curtis</div></a>
+        <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">
+        <div class="col">The Intro EP</div></a>
+        <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">
+        <div class="col">All Toronto Playlist</div></a>
+	</div>
+	
+</section>
+
+
+<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
