Fixed and finalized columns for spotify

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -18,11 +18,11 @@
 
 
 
-  <body>
+  <body class="main">
 	<!--first line depend when to expand and change width menu depending on device-->  
 	<nav class="navbar navbar-expand-sm fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">MC Curtis</a>
+			<a class="navbar-brand" href="index.html">MC Curtis</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -120,7 +120,7 @@
         <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">
         <div class="col">All Toronto Playlist</div></a>
 	</div>
-	
+
 </section>
 
 
