--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -18,7 +18,7 @@
   <body>
 	<nav class="navbar navbar-expand-sm fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">MC Curtis</a>
+			<a class="navbar-brand" href="index.html">MC Curtis</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -71,26 +71,22 @@
 
     <h4 ><Strong>Spotify</Strong></h4>
 
-
-
-<!--THIS IS FOR ANOTHER SECTION LIKE MAIN-->    
-    <div class="row"> <!--below shows how to add link to a column divident-->
-        <a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">
-        <div class="col">MC Curtis</div></a>
-        <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">
-        <div class="col">The Intro EP</div></a>
-        <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">
-        <div class="col">All Toronto Playlist</div></a>
-
+    <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
+        <div class="row">
+            <div class="col">
+                <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">MC Curtis</a>
+            </div>
+            <div class="col">
+                <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a>
+            </div>
+            <div class="col">
+                <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a>  
+            </div>        
+        </div>
     </div>
 
+ 
 
-
-    <ul>
-        <li><a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">MC Curtis</a></li>
-        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
-        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
-    </ul>
 
     <p>
     <Strong>SoundCloud</Strong>
