--- a/bootstrap intro/theintro.html
+++ b/bootstrap intro/theintro.html
@@ -18,7 +18,7 @@
   <body>
 	<nav class="navbar navbar-expand-sm fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">MC Curtis</a>
+			<a class="navbar-brand" href="index.html">MC Curtis</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
