Fixing nav bar back to black

--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -16,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-	<nav class="navbar navbar-expand-sm fixed-top">
+	<nav class="navbar navbar-expand-md fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">MC Curtis</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -90,11 +90,16 @@
 
     <p>
     <Strong>SoundCloud</Strong>
-    <ul>
-        <li><a href="https://soundcloud.com/user-593936036">MC Curtis</a></li>
-        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
-        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
-    </ul>
+        <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
+            <div class="row">
+                <div class="colhalf0">
+                    <a href="https://soundcloud.com/user-593936036">MC Curtis</a>
+                </div>
+                <div class="col">
+                    <a href="https://soundcloud.com/user-593936036/sets/the-intro-1">The Intro EP</a>
+                </div>      
+            </div>
+        </div>
     </p>
 
 
