--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -20,7 +20,7 @@
 
   <body class="main">
 	<!--first line depend when to expand and change width menu depending on device-->  
-	<nav class="navbar navbar-expand-sm fixed-top">
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">MC Curtis</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
