added and made all the links proper for TAD1

--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -69,42 +69,27 @@
     </p>
 
 
-    <h4 ><Strong>Spotify</Strong></h4>
+    <h4 ><Strong>Toronto After Dark</Strong></h4>
 
     <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
         <div class="row">
             <div class="col">
-                <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">MC Curtis</a>
+                <a href="https://ampl.ink/w1EBz">Stream Whole Album Here!</a>
             </div>
             <div class="col">
-                <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a>
+                <a href="https://ampl.ink/ZvebB">Standout Single "456"</a>
             </div>
             <div class="col">
-                <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a>  
+                <a href="https://ampl.ink/8oGwj">Standout Single "They Doin' It"</a>  
             </div>        
         </div>
     </div>
 
- 
 
-
-    <p>
-    <Strong>SoundCloud</Strong>
-        <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
-            <div class="row">
-                <div class="colhalf0">
-                    <a href="https://soundcloud.com/user-593936036">MC Curtis</a>
-                </div>
-                <div class="col">
-                    <a href="https://soundcloud.com/user-593936036/sets/the-intro-1">The Intro EP</a>
-                </div>      
-            </div>
-        </div>
-    </p>
-
-
-    <h2><Strong>Toronto After Dark 2</Strong></h2>
-
+    <section class="Page py-5"> <!--py means padding y axis-->
+        <h2 class="titlestart"><Strong>Toronto After Dark 2</Strong></h2>
+        <img src="img/TOD1.jpg" class="center">
+        <p class="darker">
     <p class="darker">
 
     Toronto After Dark 2 was where MC Curtis made his first appearance as an artist and made a splash!
