--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -82,7 +82,8 @@
 
 						</p>
 
-						<button class="btn btn-lg btn-outline-secondary">The Intro EP</button>
+						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
+							href="theintro.html">The Intro EP</a></button>
 					</div>
 
 				</div>
@@ -98,28 +99,51 @@
 		<h2 class="py-3">Check Out MC Curtis' New EP</h2>
 		<div class="mx-auto heading-line"></div>
 		<p class="py-3">MC Curtis started his career being featured on Toront After Dark 2 but he released his first
-			solo mixtape/ep June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO">Freestyle Henny</a> and <a href="https://ampl.ink/nDlYq">No Cap</a>.
+			solo mixtape/ep June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>.
 		</p>
-		<button class="btn btn-lg btn-primary">Stream Here</button>
+		<button class="btn btn-lg btn-primary"><a class="indexButton"
+			href="https://ampl.ink/emXGL">Stream Here</a></button>
 	</div>
 
 
 </section>
 
 <section>
+
+
+
 <h4 ><Strong>Spotify</Strong></h4>
 
-
-
-<!--THIS IS FOR ANOTHER SECTION LIKE MAIN-->    
-    <div class="row"> <!--below shows how to add link to a column divident-->
-        <a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">
-        <div class="col">MC Curtis</div></a>
-        <a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">
-        <div class="col">The Intro EP</div></a>
-        <a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">
-        <div class="col">All Toronto Playlist</div></a>
+<!-- <div class="container">container is the section from MC Curtis to full distography at top -->
+	<div class="row">
+		<div class="col">
+			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">MC Curtis</a>
+		</div>
+		<div class="col">
+			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a>
+		</div>
+		<div class="col">
+			<a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a>  
+		</div>        
 	</div>
+</div>
+
+
+
+
+<p>
+<Strong>SoundCloud</Strong>
+	<!-- <div class="container">container is the section from MC Curtis to full distography at top -->
+		<div class="row">
+			<div class="col">
+				<a href="https://soundcloud.com/user-593936036">MC Curtis</a>
+			</div>
+			<div class="col">
+				<a href="https://soundcloud.com/user-593936036/sets/the-intro-1">The Intro EP</a>
+			</div>      
+		</div>
+	</div>
+</p>
 
 </section>
 
