--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -69,7 +69,6 @@
     </p>
 
 
-    <h4 ><Strong>Toronto After Dark</Strong></h4>
 
     <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
         <div class="row">
@@ -88,31 +87,26 @@
 
     <section class="Page py-5"> <!--py means padding y axis-->
         <h2 class="titlestart"><Strong>Toronto After Dark 2</Strong></h2>
-        <img src="img/TOD1.jpg" class="center">
-        <p class="darker">
+        <img src="img/TAD2.jpg" class="center">
     <p class="darker">
 
     Toronto After Dark 2 was where MC Curtis made his first appearance as an artist and made a splash!
 
     </p>
 
-    <p>
-    <Strong>Spotify</Strong>
-    <ul>
-        <li><a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=ZVXGeYYgSviXdTf00EZ5tQ">MC Curtis</a></li>
-        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
-        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
-    </ul>
-    </p>
-
-    <p>
-    <Strong>SoundCloud</Strong>
-    <ul>
-        <li><a href="https://soundcloud.com/user-593936036">MC Curtis</a></li>
-        <li><a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a></li>
-        <li><a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a></li>
-    </ul>
-    </p>
+        <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
+            <div class="row">
+                <div class="col">
+                    <a href="https://ampl.ink/j4blV">Stream Whole Album Here!</a>
+                </div>
+                <div class="col">
+                    <a href="https://ampl.ink/VD2Ke">Standout MC Curtis Single "Fuck With The Vision"</a>
+                </div>
+                <div class="col">
+                    <a href="https://ampl.ink/nDwYA">Standout Single "No More"</a>  
+                </div>        
+            </div>
+        </div>
 
 
     <!-- Optional JavaScript -->
