--- a/bootstrap intro/theintro.html
+++ b/bootstrap intro/theintro.html
@@ -59,7 +59,33 @@
 		</div>
 		
 	</nav>
+	<!--Home-->
+	<section class="home container">
+		<div class="row mt-5">
+			<div class="col-lg-6 mt-5 py-5 pl-5">
+				<img class="img-fluid" alt="" src="img/MillCoverDark.png">
+			</div>
+			<!--my means margin on y-->
+			<div class="col-lg-6 my-auto">
+				<!-- so we have 12 rows to work with-->
+				<div class="row">
+					<div class="home-content offset -lg-1 col-lg-10">
+						<h1 class="pb-3"> MC Curtis</h1>
+						<h2 class="pb-3"> On The Rise</h2>
+						<p class="pb-3"> This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released 
+						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
 
+						</p>
+
+						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
+							href="theintro.html">The Intro EP</a></button>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
