Worked on and mostly finished the intro page

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -75,7 +75,7 @@
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
-						<h1 class="pb-3"> MC Curtis</h1>
+						<h1 class="pb-3"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> On The Rise</h2>
 						<p class="pb-3"> This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released 
 						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
