--- a/bootstrap intro/theintro.html
+++ b/bootstrap intro/theintro.html
@@ -63,22 +63,57 @@
 	<section class="home container">
 		<div class="row mt-5">
 			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="img/MillCoverDark.png">
+				<img class="img-fluid" alt="" src="img/IntroAlbumArt.jpg">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
-						<h1 class="pb-3"> MC Curtis</h1>
-						<h2 class="pb-3"> On The Rise</h2>
-						<p class="pb-3"> This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released 
-						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
+						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
+						<h2 class="pb-3"> The Intro</h2>
+                        <p class="BGdarkest"> <a href="https://ampl.ink/emXGL">"The Intro"</a> is MC Curtis' first mixtape/EP which he released
+                            on June 1st 2020. MC Curtis had a large collection of records he had wrote, recorded, and mixed himself in his basement
+                            but he knew as he continued to improve as an artist he would have a stalk pile of records so this project was released
+                            because he felt like he wanted to release his old stuff to make way for the new professionally recorded work. Also this
+                            was during the infamous Corona Virus pandemic so he wanted to give his fans something to listen to and also take advantage
+                            of everyone being stuck at home.
 
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="theintro.html">The Intro EP</a></button>
+							href="https://ampl.ink/emXGL">Click Here To Stream!</a></button>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+    </section>
+    
+	<section class="BGdarkest">
+		<div class="row mt-5">
+			<div class="col-lg-6 mt-5 py-5 pl-5">
+				<img class="img-fluid" alt="" src="img/TracklistIntro.jpg">
+			</div>
+			<!--my means margin on y-->
+			<div class="col-lg-6 my-auto">
+				<!-- so we have 12 rows to work with-->
+				<div class="row">
+					<div class="home-content offset -lg-1 col-lg-10">
+						<h2 class="pb-3" style="color: white"> The Intro</h2>
+                        <p class="BGdarkest"> <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a> by MC Curtis' has already garnered thousands
+                            of streams while being placed on many hip-hop and rap playlists globally! On SoundCloud the standout track was the single
+                            <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> Which already has surpassed 10k streams and is still growing
+                            and on spotify the standout amoungst the mixtape so far was a track titled <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
+                            currently sitting at over 7k streams. This was only a warmup for the young rapper as you could probably infer from the title 
+                            of the mixtape and more big things will be coming your way with MC Curtis so make sure to keep up with all his <a href="Socials.html"><u>socials</u></a> and keep
+                            streaming and sharing The Intro around!
+
+						</p>
+
+						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
+							href="https://ampl.ink/emXGL" style="color: white">Click Here To Stream!</a></button>
 					</div>
 
 				</div>
