--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -50,11 +50,12 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Full Distography Links</a>
 						<div class="dropdown-menu" aria-labelledby="dropdownId">
-							<a class="dropdown-item" href="#">Fuck With the Vision</a>
-							<a class="dropdown-item" href="#">Make a Mill</a>
-							<a class="dropdown-item" href="#">Keep the Liquor Flowin'</a>
-							<a class="dropdown-item" href="#">Loud That I Smoke</a>
-							<a class="dropdown-item" href="#">Freestyle Henny</a>
+							<a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
+							<a class="dropdown-item" href="MakeAMill.html">Make a Mill</a>
+							<a class="dropdown-item" href="LiquorFlowin.html">Keep the Liquor Flowin'</a>
+							<a class="dropdown-item" href="LoudThatISmoke.html">Loud That I Smoke</a>
+							<a class="dropdown-item" href="FreestyleHenny.html">Freestyle Henny</a>
+							<a class="dropdown-item" href="Sick.html">Sick When You Do That Remix</a>
 						</div>
 					</li>
 				</ul>
