Added in Images and updated full distography pages

--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -51,7 +51,7 @@
 							<a class="dropdown-item" href="LiquorFlowin.html">Keep the Liquor Flowin'</a>
 							<a class="dropdown-item" href="LoudThatISmoke.html">Loud That I Smoke</a>
 							<a class="dropdown-item" href="FreestyleHenny.html">Freestyle Henny</a>
-							<a class="dropdown-item" href="Sick.html">Sick When You Do That Remix</a>
+                            <a class="dropdown-item" href="Sick.html">Sick When U Do That Remix</a>
 						</div>
 					</li>
 				</ul>
