--- a/bootstrap intro/FreestyleHenny.html
+++ b/bootstrap intro/FreestyleHenny.html
@@ -46,21 +46,26 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Full Distography Links</a>
 						<div class="dropdown-menu" aria-labelledby="dropdownId">
-							<a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
+                            <a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
 							<a class="dropdown-item" href="MakeAMill.html">Make a Mill</a>
 							<a class="dropdown-item" href="LiquorFlowin.html">Keep the Liquor Flowin'</a>
 							<a class="dropdown-item" href="LoudThatISmoke.html">Loud That I Smoke</a>
 							<a class="dropdown-item" href="FreestyleHenny.html">Freestyle Henny</a>
-							<a class="dropdown-item" href="Sick.html">Sick When U Do That Remix</a>
+							<a class="dropdown-item" href="Sick.html">Sick When You Do That Remix</a>
 						</div>
 					</li>
 				</ul>
 			</div>
-
 		</div>
 		
-	</nav>
-
+    </nav>
+    <section class="Page py-5"> <!--py means padding y axis-->
+        <h2 class="titlestart"><Strong>Freestyle Henny</Strong></h2>
+        <img src="img/FreestyleHenny.jpg" class="center">
+        <div class="wrapper">
+            <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
+			href="https://ampl.ink/emXGL">Stream Here</a></button>
+        </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
