Started working on Freeze Up new releases page

--- a/bootstrap intro/FWTV.html
+++ b/bootstrap intro/FWTV.html
@@ -27,6 +27,9 @@
 				<ul class="nav">
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
@@ -34,7 +37,8 @@
 
 					<li class="nav-item">
 						<a class="nav-link" href="Socials.html">Socials</a>
-					</li>
+                    </li>
+
 					<li class="nav-item">
 						<a class="nav-link" href="Collabs.html">Collabs</a>
 					</li>
