--- a/bootstrap intro/Collabs.html
+++ b/bootstrap intro/Collabs.html
@@ -31,7 +31,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
 					</li>
-
+					<li class="nav-item">
+						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="Socials.html">Socials</a>
 					</li>
