--- a/bootstrap intro/LiquorFlowin.html
+++ b/bootstrap intro/LiquorFlowin.html
@@ -29,6 +29,9 @@
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
 					</li>
 
