--- a/bootstrap intro/UCU.html
+++ b/bootstrap intro/UCU.html
@@ -27,6 +27,9 @@
 				<ul class="nav">
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
