Set up and wrote paragraph for freeze up

--- a/bootstrap intro/FreezeUp.html
+++ b/bootstrap intro/FreezeUp.html
@@ -16,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
   </head>
   <body>
-	<nav class="navbar navbar-expand-sm fixed-top">
+	<nav class="navbar navbar-expand-md navbar-light fixed-top " style="background-color: white;">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">MC Curtis</a>
 			<button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -63,10 +63,10 @@
     </nav>
 
 	<!--Home-->
-	<section class="home container">
+	<body class="main">
 		<div class="row mt-5">
 			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="img/IntroAlbumArt.jpg">
+				<img class="img-fluid" alt="" src="img/freezeup.jpg">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
@@ -74,14 +74,13 @@
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
-						<h2 class="pb-3"> The Intro</h2>
-                        <p class="BGdarkest"> <a href="https://ampl.ink/emXGL">"The Intro"</a> is MC Curtis' first mixtape/EP which he released
-                            on June 1st 2020. MC Curtis had a large collection of records he had wrote, recorded, and mixed himself in his basement
-                            but he knew as he continued to improve as an artist he would have a stalk pile of records so this project was released
-                            because he felt like he wanted to release his old stuff to make way for the new professionally recorded work. Also this
-                            was during the infamous Corona Virus pandemic so he wanted to give his fans something to listen to and also take advantage
-                            of everyone being stuck at home.
-
+						<h2 class="pb-3"> Freeze Up</h2>
+                        <p class="BGdarkest"> <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
+                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Conterary to his mixtape release, <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a>
+                            was recorded at an infamous studio in Toronto called Majur Music Studios which have had many notiable toronto artists record there
+                            including 3MFrench, to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer pop kris (who has credits
+                            with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid back vibe and following some success from "The Intro", MC Curtis felt like this
+                            is a great song to follow up with to continue to show his diversity in his art and also show people what he has to offer!
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
@@ -93,37 +92,6 @@
 			</div>
 		</div>
     </section>
-    
-	<section class="BGdarkest">
-		<div class="row mt-5">
-			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="img/TracklistIntro.jpg">
-			</div>
-			<!--my means margin on y-->
-			<div class="col-lg-6 my-auto">
-				<!-- so we have 12 rows to work with-->
-				<div class="row">
-					<div class="home-content offset -lg-1 col-lg-10">
-						<h2 class="pb-3" style="color: white"> The Intro</h2>
-                        <p class="BGdarkest"> <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a> by MC Curtis' has already garnered thousands
-                            of streams while being placed on many hip-hop and rap playlists globally! On SoundCloud the standout track was the single
-                            <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> Which already has surpassed 10k streams and is still growing
-                            and on spotify the standout amoungst the mixtape so far was a track titled <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
-                            currently sitting at over 7k streams. This was only a warmup for the young rapper as you could probably infer from the title 
-                            of the mixtape and more big things will be coming your way with MC Curtis so make sure to keep up with all his <a href="Socials.html"><u>socials</u></a> and keep
-                            streaming and sharing The Intro around!
-
-						</p>
-
-						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/emXGL" style="color: white">Click Here To Stream!</a></button>
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-	</section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
