--- a/bootstrap intro/FreezeUp.html
+++ b/bootstrap intro/FreezeUp.html
@@ -76,11 +76,11 @@
 						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Freeze Up</h2>
                         <p class="BGdarkest"> <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
-                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Conterary to his mixtape release, <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a>
-                            was recorded at an infamous studio in Toronto called Majur Music Studios which have had many notiable toronto artists record there
-                            including 3MFrench, to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer pop kris (who has credits
-                            with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid back vibe and following some success from "The Intro", MC Curtis felt like this
-                            is a great song to follow up with to continue to show his diversity in his art and also show people what he has to offer!
+                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a>
+                            was recorded at an infamous studio in Toronto called "Majur Musik Studios" which have had many notable toronto artists record there
+                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer pop kris (who has credits
+                            with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
+                            is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
