Added in links to FreezeUp and changed format and bio in index/MC Curtis main page

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -82,7 +82,7 @@
 						<h1 class="pb-3"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> On The Rise</h2>
 						<p class="pb-3"> This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released 
-						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>
+						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>.
 
 						</p>
 
@@ -95,15 +95,49 @@
 			</div>
 		</div>
 	</section>
+
+
+
+<section class="go-stream py-5" style="background-color: antiquewhite;">
+	<!--Making the size of this class. text in center
+	and width of text 50% of the screen-->
+	<div class="container text-center w-50">
+		<h2 class="py-3">The Man Behind the Music</h2>
+		<div class="mx-auto heading-line"></div>
+		<p class="py-3">MC Curtis is an up and coming rapper from the Greater Toronto Area. MC Curtis 
+			started in the music industry when he created his distribution and management company
+			 Underground Comeup Records (UCU). In early 2019 he released a collaborative album with 
+			 artists from Toronto to showcase there talent called "Toronto After Dark" (MC Curtis did 
+			 not actually rap on this project). In July 2019 to follow up, he released "Toronto After
+			  Dark 2" which had the first appearance of MC Curtis with his first ever release "Fuck
+			   With the Vision" which has received over 20 thousands streams on spotify which significantly
+			    out performed the rest of the tracks on Toronto After Dark 2. 
+
+			MC Curtis is currently in university for software engineering so his schedule is pretty chaotic but he still
+			 finds time to dedicate to his craft. MC Curtis has dropped a couple of songs all leading up to his
+			  first EP release titled <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a> which he released June 1st which has already garnered thousands
+			  of streams! This tape included standout tracks such as <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> Which already has surpassed 10k streams
+			  on soundcloud alone and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
+			  which is currently sitting at over 7k streams on Spotify. Make sure to stay up to date and follow me on my journey and check out my new single 
+			  <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>Freeze Up</u></a>, you won't be disappointed!
+			  
+			 <button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
+				href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2">Stream Freeze Up</a></button>
+			</p>
+
+	</div>
+
+
+</section
 <!--Check Out MC Curtis' New EP-->
-<section class="go-stream py-5">
+<section class="go-stream py-5" style="background-color: aquamarine;">
 	<!--Making the size of this class. text in center
 	and width of text 50% of the screen-->
 	<div class="container text-center w-50">
 		<h2 class="py-3">Check Out MC Curtis' New EP</h2>
 		<div class="mx-auto heading-line"></div>
 		<p class="py-3">MC Curtis started his career being featured on Toront After Dark 2 but he released his first
-			solo mixtape/ep June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>.
+			solo mixtape/ep on June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>.
 		</p>
 		<button class="btn btn-lg btn-primary"><a class="indexButton"
 			href="https://ampl.ink/emXGL">Stream Here</a></button>
@@ -112,7 +146,7 @@
 
 </section>
 
-<section>
+<section style="background-color: aqua;">
 
 
 
@@ -135,8 +169,7 @@
 
 
 
-<p>
-<Strong>SoundCloud</Strong>
+<h4 ><Strong>SoundCloud</Strong></h4>
 	<!-- <div class="container">container is the section from MC Curtis to full distography at top -->
 		<div class="row">
 			<div class="col">
@@ -147,7 +180,7 @@
 			</div>      
 		</div>
 	</div>
-</p>
+
 
 </section>
 
