--- a/bootstrap intro/FreezeUp.html
+++ b/bootstrap intro/FreezeUp.html
@@ -75,8 +75,9 @@
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Freeze Up</h2>
-                        <p class="BGdarkest"> <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
-                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://ampl.ink/emXGL"><u>"Freeze Up"</u></a>
+                        <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
+                            Toronto area with a passion to create. <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
+                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>"Freeze Up"</u></a>
                             was recorded at an infamous studio in Toronto called "Majur Musik Studios" which have had many notable toronto artists record there
                             including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer pop kris (who has credits
                             with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
@@ -84,7 +85,7 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/emXGL">Click Here To Stream!</a></button>
+							href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2">Click Here To Stream!</a></button>
 					</div>
 
 				</div>
